// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextMenu > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with custom slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with default slot correctly 1`] = `
"Default slot
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with disabled correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with item slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with items correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with label slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with leading slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with trailing slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;

exports[`ContextMenu > renders with ui correctly 1`] = `
"<!--v-if-->
<!--teleport start-->



<!---->



<!--teleport end-->"
`;
